# obsidian-ai-tools

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  README.md  debug_v2_response.py  folder_rules.json.example  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: decisions.md  roadmap-2026.md  roadmap.md
eval/: rubric.md  v2_test_report.md  week3_results.md
prompts/: article_v1.md  markdown_v1.md  pdf_v1.md  youtube_v1.md  youtube_v2.md
scripts/: lint.sh  scan_secrets.sh  test.sh  typecheck.sh
src/obsidian_ai_tools/: __init__.py  __main__.py  api_contracts.py  cache.py  circuit_breaker.py  cli.py  concept_linking.py  config.py  digest.py  folder_organizer.py  indexer.py  llm.py  logging.py  models.py  observability.py  obsidian.py  preview.py  search.py  transcript_validation.py  youtube.py  youtube_exceptions.py  youtube_providers.py
src/obsidian_ai_tools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/obsidian_ai_tools/providers/: base.py  factory.py  file.py  pdf.py  web.py  youtube.py
src/obsidian_ai_tools/utils/: rate_limiter.py
test_vault/inbox/: web-obsidian-ai-tools---youtube-video-ingestion-with-llm-generated-notes.md
tests/: conftest.py  test_api_contracts.py  test_cache.py  test_circuit_breaker.py  test_cli.py  test_concept_linking.py  test_config.py  test_digest.py  test_fixtures.py  test_indexer.py  test_llm.py  test_models.py  test_obsidian.py  test_preview.py  test_search.py  test_youtube.py
tests/providers/: test_pdf.py  test_youtube_providers.py
