[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "obsidian-ai-tools"
version = "0.1.0"
description = "AI-powered tools for Obsidian knowledge management"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.9.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "youtube-transcript-api>=0.6.0",
    "openai>=1.6.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "google-api-python-client>=2.100.0",
    "google-auth-httplib2>=0.1.0",
    "google-auth-oauthlib>=1.0.0",
    "tenacity>=8.2.0",
    "trafilatura>=1.6.0",
    "structlog>=24.1.0",
    "python-frontmatter>=1.0.0",
    "Whoosh>=2.7.4",
    "requests>=2.31.0",
]

[project.scripts]
kai = "obsidian_ai_tools.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    ".venv",
    "migrations",
]

[tool.ruff.lint]
select = ["E", "F", "W", "B", "UP", "I"]
ignore = [
    "E203",  # whitespace before ':' – black compatibility
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
minversion = "7.4"
addopts = [
    "-ra",
    "--strict-markers",
    "--disable-warnings",
    "--maxfail=1",
]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src/obsidian_ai_tools"]
omit = [
    "src/obsidian_ai_tools/__main__.py",
]

[tool.coverage.report]
fail_under = 45  # MVP threshold - increase to 85+ after adding integration tests
show_missing = true
skip_covered = false
precision = 2
